# Encrypted-Notepad

./: .gitignore  Dependence.md  Dependence.txt  README.md  TODO.md  Update.md  Update_log.txt  開發進度.txt
Test/: 0211_core2.5-1.ent  0211_core2.5-TDES.ent  0218_v3.0dev.ent  0327_core3(2).ent  0327_core3(3).ent  0327_core3.ent  0422test.ent  0718_core2.0.ent  0720-1_core2.1.ent  0720_core2.1.ent  1010_core3-AES-01.ent  1214_test.ttxxtt  1214_v3.0_autosave_dev.ent  test des+aes.ent  test1.ent  test2.ent  test3.ent  testIO.txt
WapProjTemplate1/: Package.appxmanifest  WapProjTemplate1.wapproj
code/: DES.vb  FileProcess.vb  IsValidEmail.vb  KeyTools.vb  ReportPage.Designer.vb  ReportPage.vb  Sysinfo.ini  (+8 more)
src/: AES.vb  ConfigProcessor.py  ConfigTools.vb  DES.vb  EncryptedCore.py  EncryptedCore.vb  EncryptedNotepad.py  EncryptedNotepad.spec  FileIO.py  FileProcess.vb  Installer.nsi  IsValidEmail.vb  KeyTools.vb  Pipfile  ProgramTool.vb  ReportPage.vb  Sysinfo.ini  TDES.vb  TODO.md  UpdateInfo.ini  WorkSpace.Designer.vb  WorkSpace.resx  WorkSpace.vb  app  app.py  authPage.py  config.json  config.py  interface_test.py  keytools.py  language-tools.vb  login.Designer.vb  login.resx  login.vb  mainUI.py  packages.config  pyproject.toml  uicontrol.py  加密記事本-New.sln  加密記事本-New.vbproj
src/My Project/: Application.Designer.vb  AssemblyInfo.vb  Settings.Designer.vb
src/QtGUI/: AuthPage.ui  authPage.py
src/Scripts/: build.cmd  osxRemove.py
src/assests/: icon.icns
src/language/: Language.list  en-us  es  zh-cn  zh-tw
src/test/: test  test.txt
src/tools/: batchProcessor.py
(+13 files in other folders)
