[tool.poetry]
name = "EncryptedNotepad"
version = "4.0.1"
description = ""
authors = ["oxygen-TW <howard2805@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pycryptodome = "^3.14.0"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pyinstaller = "^4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
